--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -15,6 +15,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".anim.Anim1Activity" />
+        <activity android:name=".activity.WebViewActivity" />
+        <activity
+            android:name=".activity.YinJieActivity"
+            android:process=":test" />
+        <activity
+            android:name=".activity.DialogFragmentActivity"
+            android:label="@string/title_activity_dialog_fragment" />
+        <activity android:name=".activity.HorizontalListViewActivity" />
+        <activity
+            android:name=".activity.TestActivity"
+            android:label="@string/title_activity_test" />
+        <activity android:name=".activity.DesignActivity"></activity>
+
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
